recherche par contenu + refacto renvoi gab et user
